syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.rodrigodonizettio";
option java_outer_classname = "PokemonProto";

package pokemon;

// Service definition
service PokemonGrpcService {
  // Method definition
  rpc PokemonGrpcAppear (PokemonGrpcRequestName) returns (PokemonGrpc) {}
}

// Request Message containing the pokemon's name
message PokemonGrpcRequestName {
  string name = 1;
}

// Return Message containing the Pokemon
message PokemonGrpc {
  string uuid = 1;
  string name = 2;
  int32 height = 3;
  int32 weight = 4;
}